add og/twitter head

--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
 		</script>
 	<link rel='stylesheet' id='wp-block-library-css'  href='css/style.min6f06.css' type='text/css' media='all' />
 
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://4notfour.com/">
+<meta property="og:title" content="4notfour">
+<meta property="og:description" content="">
+<meta property="og:image" content="https://4notfour.com/imgs/og-img.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://4notfour.com/">
+<meta property="twitter:title" content="4notfour">
+<meta property="twitter:description" content="">
+<meta property="twitter:image" content="https://4notfour.com/imgs/og-img.jpg">
 <link rel="icon" href="favicon.ico" sizes="32x32" />
 <link rel="icon" href="favicon.ico" sizes="192x192" />
 <link rel="apple-touch-icon" href="favicon.ico" />
