corrected page one

--- a/css/owl.video.play.html
+++ b/css/owl.video.play.html
@@ -85,17 +85,17 @@ img.emoji {
 
         </div>
 
-        <span class="nextSlideButton nextSlideButton-style text-uppercase light-font">Creative Solutions</span>
+        <span class="nextSlideButton nextSlideButton-style text-uppercase light-font">About us</span>
 
     </section>
-    <section class="section fp-auto-height" id="CreativeSolutions">
+    <section class="section fp-auto-height" id="Aboutus">
         <div class="cover-container h-100 mx-auto d-flex align-items-stretch">
 
             <div class="row grad-row absolute-title">
 
                 <div class="col-lg-6 grad-bg text-white pl5 p-10h order-2 order-lg-1">
 
-                    <h1 class="section-title bold-font text-white" data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" >Creative Solutions</h1>
+                    <h1 class="section-title bold-font text-white" data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" >About us</h1>
 
                     <p class="pt-4 light-font lead " data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" data-aos-delay="300">
 
@@ -637,7 +637,7 @@ img.emoji {
                 responsiveWidth: 480,
                 responsiveHeight: 640,
                 navigationPosition: 'right',
-                navigationTooltips: ['Intro', 'Creative Solutions', 'Our Story', 'Transformation', 'Innovation', 'The Process','What Lies Ahead?','Excellence','Get In Touch'],
+                navigationTooltips: ['Intro', 'About us', 'Our Story', 'Transformation', 'Innovation', 'The Process','What Lies Ahead?','Excellence','Get In Touch'],
                 afterResponsive: function(isResponsive){
                     if(isResponsive){
                         $.fn.fullpage.setAutoScrolling(false);
