--- a/index.html
+++ b/index.html
@@ -71,32 +71,32 @@
 
                 <h1 class="bold-font text-white" data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" >TURNING VISIONS TO CREATIONS</h1>
 
-                <p class="pt-4" data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" data-aos-delay="300">A wave of innovation towards the future</p>
+                <p class="pt-4" data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" data-aos-delay="300">Innovating towards a better future</p>
 
                 <span class="callUs d-block mt-5 pl-4 blueBlockBG text-uppercase text-white call-us" data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" data-aos-delay="600">Let's get in touch</span>
             </main>
 
         </div>
 
-        <span class="nextSlideButton nextSlideButton-style text-uppercase light-font">Creative Solutions</span>
+        <span class="nextSlideButton nextSlideButton-style text-uppercase light-font">About us</span>
 
     </section>
-    <section class="section fp-auto-height" id="CreativeSolutions">
+    <section class="section fp-auto-height" id="Aboutus">
         <div class="cover-container h-100 mx-auto d-flex align-items-stretch">
 
             <div class="row grad-row absolute-title">
 
                 <div class="col-lg-6 grad-bg text-white pl5 p-10h order-2 order-lg-1">
 
-                    <h1 class="section-title bold-font text-white" data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" >Creative Solutions</h1>
+                    <h1 class="section-title bold-font text-white" data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" >About Us</h1>
 
                     <p class="pt-4 light-font lead " data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" data-aos-delay="300">
 
-                        4notfour holdings represents a modern wave of startups interested in adding value to your life and enhancing the existing ways of doing things. Our asset as a digital solutions provider comes from our team's commitment to creating highly useful and effective tools for both business and personal use.
+                        4notfour LLP represents a conglomerate of innovative and modern startups interested  and involved in creating products and solutions that enhances/enriches the method of doing things in real life with the optimal technical and About us. Our Industry leading solutions and products comes from our team's innate desire for perfections in the products we build.
 
                         <br><br>
 
-                        At 4notfour, we follow a future-oriented business process that delivers innovative and pioneering digital platforms and next-generation tools. Our customized applications are unique, friendly, scalable and built with the latest technologies at the highest quality to provides intuitive and meaningful answers to users daily problems.
+                        We follow a buisiness process that focusses on future oriented, Innovative approach to deliver products utilising state of the art tools and processes. Our solutions are unique, friendly, scalable and build with future in mind utilising the technology pioneers under strict quality standards to provide intutive and meaningful solutions to problems.
 
                     </p>
 
@@ -627,7 +627,7 @@
                 responsiveWidth: 480,
                 responsiveHeight: 640,
                 navigationPosition: 'right',
-                navigationTooltips: ['Intro', 'Creative Solutions', 'Our Story', 'Transformation', 'Innovation', 'The Process','What Lies Ahead?','Excellence','Get In Touch'],
+                navigationTooltips: ['Intro', 'About us', 'Our Story', 'Transformation', 'Innovation', 'The Process','What Lies Ahead?','Excellence','Get In Touch'],
                 afterResponsive: function(isResponsive){
                     if(isResponsive){
                         $.fn.fullpage.setAutoScrolling(false);
