Corrected all pages prior to what lies ahead

--- a/css/owl.video.play.html
+++ b/css/owl.video.play.html
@@ -158,10 +158,10 @@ img.emoji {
 
         </div>
 
-        <span class="nextSlideButton nextSlideButton-style text-uppercase light-font">Transformation</span>
+        <span class="nextSlideButton nextSlideButton-style text-uppercase light-font">Ventures</span>
 
     </section>
-    <section class="section fp-auto-height" id="Transformation">
+    <section class="section fp-auto-height" id="Ventures">
 
         <span class="layer-black"></span>
 
@@ -637,7 +637,7 @@ img.emoji {
                 responsiveWidth: 480,
                 responsiveHeight: 640,
                 navigationPosition: 'right',
-                navigationTooltips: ['Intro', 'About us', 'Our Story', 'Transformation', 'Innovation', 'The Process','What Lies Ahead?','Excellence','Get In Touch'],
+                navigationTooltips: ['Intro', 'About us', 'Our Story', 'Ventures', 'Innovation', 'The Process','What Lies Ahead?','Excellence','Get In Touch'],
                 afterResponsive: function(isResponsive){
                     if(isResponsive){
                         $.fn.fullpage.setAutoScrolling(false);
