--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                     <p class="pt-4 light-font lead " data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" data-aos-delay="300">
 
-                        4notfour LLP represents a conglomerate of innovative and modern startups interested  and involved in creating products and solutions that enhances/enriches the method of doing things in real life with the optimal technical and About us. Our Industry leading solutions and products comes from our team's innate desire for perfections in the products we build.
+                        4notfour LLP represents a conglomerate of innovative and modern startups interested  and involved in creating products and solutions that enhances/enriches the method of doing things in real life with the optimal technical and Creative solutions. Our Industry leading solutions and products comes from our team's innate desire for perfections in the products we build.
 
                         <br><br>
 
@@ -252,19 +252,19 @@
 
                     <p class="pt-4 light-font lead " data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" data-aos-delay="300">
 
-                        Great things are on the horizon for you.
+                        Incredible things are just a step away for you.
 
-                        Whether you're looking for the next best digital solution to invest in or simply something to make your life easier, technology has reached a new level.
-
-                        <br><br>
-
-                        Our society has reached a point where things are about to get unrecognizably different.
-
-                        The digital landscape as you know it is about to change in a way you were never expecting.
+                        Regardless of whether you're searching for the next best solution to put resources into or just something to make your life simpler,you has just arrived at another level of Innovation.
 
                         <br><br>
 
-                        The 4notfour team is helping make that change a reality. As the information undergoes a technological revolution, the rise of the digital era is coming.
+                      We as a society has reached a point where things are about to get unrecognizably different day by day.
+
+                        The world as you know it is about to change in unrecognisable ways.
+
+                        <br><br>
+
+                        Our team  at 4notfour aids in making your shift to the new world faster. As the world undergoes a revolution, the rise of a digital era is coming.
 
                     </p>
 
@@ -293,11 +293,12 @@
                 <div class="col-12 m-auto pb-lg-5 mb-5"  data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back">
                     <h1 class="section-title bold-font m-auto">A TRACK RECORD OF EXCELLENCE</h1>
                     <p class="pt-5 light-font lead text-center pr-4 pl-4">
-                        Everyone on the 4notfour team has deep operational experience from a wide range of industries that span from engineering to AI and beyond.
+                        We at 4notfour is a team of experienced individual’s with deep operational experiences in  a wide array of industries that span right from design to Production, Cognitive intelligence and beyond.
                         <br>
-                        By bringing together a team of bright individuals with a proven track record of success, we have the in-house expertise needed to revolutionize the mobile and web application world.<br>
-                        As a company, we follow a path that blends and combines all the passions of our team members into one trajectory.<br>
-                        If you've had the pleasure of already working with us, you know how much we care.
+                        With a team of bright individuals with a proven track record of success, we have the expertise required to revolutionise any developmental or production requirement thrown at us in-house.<br>
+                        As a group, we follow a path that blends and combines the passions of our team members into a projectile trajectory.<br>
+                        If you've had the pleasure of already working with us, you already know how much we care.
+
                     </p>
                 </div>
 
@@ -333,7 +334,7 @@
                             </span>
                             <span class="float-left pl-3">
                                 <span class="reg-font d-block">Call Us:</span>
-                                <span class="light-font d-block text-white">+91-</span>
+                                <span class="light-font d-block text-white">+91-8714816042</span>
                             </span>
                         </div>
                         <div class="clearfix float-md-left  mr-md-5 pr-md-5 mt-3 pt-2 pt-md-0">
