--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 
                     <p class="pt-4 light-font lead " data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" data-aos-delay="300">
 
-                        4notfour LLP represents a conglomerate of innovative and modern startups interested  and involved in creating products and solutions that enhances/enriches the method of doing things in real life with the optimal technical and Creative solutions. Our Industry leading solutions and products comes from our team's innate desire for perfections in the products we build.
+                        4notfour LLP represents a conglomerate of innovative and modern startups interested  and involved in creating products and solutions that enhances/enriches the method of doing things in real life with the optimal technical and creative solutions. Our Industry leading solutions and products comes from our team's innate desire for perfections in the products we build.
 
                         <br><br>
 
-                        We follow a buisiness process that focusses on future oriented, Innovative approach to deliver products utilising state of the art tools and processes. Our solutions are unique, friendly, scalable and build with future in mind utilising the technology pioneers under strict quality standards to provide intutive and meaningful solutions to problems.
+                        We follow a business process that focuses on future oriented, innovative approach to deliver products utilising state of the art tools and processes. Our solutions are unique, friendly, scalable and build with future in mind utilising the technology pioneers under strict quality standards to provide intuitive and meaningful solutions to problems.
 
                     </p>
 
