--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
 
                     <p class="pt-5 light-font lead mr-lg-5" data-sal="slide-up" data-sal-delay="300" data-sal-duration="1000" data-sal-easing="ease-out-back" data-aos-delay="300">
 
-                        Never settle for anything less than the best. Oftentimes, the best solution is the easiest. 4notfour was based on an establishment of effortlessness and pledge to greatness. We are determined to comprehend your point of view and pound your most noteworthy hindrances through tech-based advancements. 
+                        Never settle for anything less than the best. Oftentimes, the best solution is the easiest. 4notfour is based on an establishment of effortlessness and pledge to greatness. We are determined to comprehend your point of view and pound your most noteworthy hindrances through tech-based advancements. 
 
                         <br><br>
 
-                        By consolidating a comprehension of industry snags and a profound information on rising innovations, we construct ageless web and versatile applications our accomplices can use for quite a long time to come. It doesn't stop there. Our group stays to help oversee, support and update anything we've developed.
+                        By consolidating a comprehension of industry snags and a profound information on rising innovations, we construct ageless web and versatile applications, our accomplices can use for quite a long time to come. It doesn't stop there. Our group stays to help oversee, support and update anything we've developed.
 
                         <span class="med-font d-block pt-2 pt-lg-4">
                             And that makes <a href="#" class="text-white tech-amulets">4notfour</a> different
