--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
 <link rel="icon" href="favicon.ico" sizes="192x192" />
 <link rel="apple-touch-icon" href="favicon.ico" />
  <link rel="stylesheet" href="/styles.css">
+
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LW19WH1VDS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LW19WH1VDS');
+</script>
 </head>
 
 <body>
