--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <title>4notfour</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="4notfour LLP represents a conglomerate of innovative and modern startups interested  and involved in creating products and solutions that enhances/enriches the method of doing things in real life with the optimal technical and creative solutions. Our Industry leading solutions and products comes from our team's innate desire for perfections in the products we build.">
   <meta name="keywords" content="4notfour,fournotfour,agora,HTML,html,Website,WEBSITE,React,Flutter,responsive,app,appbuilding,Webbuilding,Agility,Cloud,Hybrid,Social Media,Virtual Machines,Storage,Provisioning,Cloud solutions,AWS,aws,GCP,gcp,Google cloud,google cloud,Azure,azure,Optimization,SEO,seo,searchengineoptimization,optimization,searchengine,Information Technology,Technical Support,it Services,it Security,it Solutions,Cloud Technology,Infrastructure as a Service,Network Security,Robotics,IOT,Internet of Things,Products,web solutions,online business,marketing,contentwriting,artificial intelligence,Machine learning,Big data,analytics,data science,emerging Technology,advancing technology,intel optimised,Code optimisation,Openvino,oneapi,fastapi,node">
   <meta name="author" content="4notfour">
     <!-- Bootstrap CSS -->
