--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                                 <a target="_blank" href=""><i class="lab la-youtube"></i></a>
                             </li>
                             <li class="p-0">
-                                <a target="_blank" href=""><i class="
+                                <a target="_blank" href="https://www.linkedin.com/company/4notfour"><i class="
 												lab la-linkedin"></i></a>
                             </li>
                         </ul>
